--- a/.drone.yml
+++ b/.drone.yml
@@ -2,17 +2,13 @@ kind: pipeline
 name: default
 
 steps:
-- name: test
-  image: mysql
+- name: start
+  image: node
+  detach: true
   commands:
-  - sleep 15
-  - mysql -u root -h database --execute="SELECT VERSION();"
-
-services:
-- name: database
-  image: mysql
-  ports:
-  - 3306
-  environment:
-    MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-    MYSQL_DATABASE: test
+  - npm install
+  - npm build
+  - npm start
+  when:
+    branch:
+    - master
